--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-server.port=8080
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+server.port: 8081
+spring.jpa.hibernate.ddl-auto: create-drop
+spring.jpa.show-sql: true
